# Physical_AI_and_Humanoid_Robotic_Book

./: .gitignore  CLAUDE.md  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_implementation.js  vercel.json
.claude/: settings.local.json
.claude/commands/: sp.finalization.md
.specify/memory/: constitution.md
api/: index.py
backend/: .env.example  .gitignore  README.md  agent.example.md  main.py  pyproject.toml  requirements.txt  test_auth.py
backend/scripts/: ingestion.py  init_db.py  load_textbook_content.py  test_retrieval.py  test_sample_queries.py  validate_implementation.py
backend/src/api/: auth_routes.py  main.py  oauth_routes.py  rag_routes.py  textbook_routes.py
backend/src/config/: cohere_config.py  database.py  gemini_config.py  qdrant_config.py  settings.py
backend/src/models/: chat.py  embedding.py  query.py  rate_limit.py  response.py  session.py  textbook.py  user.py
backend/src/services/: agent.py  auth_service.py  embedding_service.py  oauth_service.py  rag_service.py  rate_limit.py  rate_limit_service.py  retrieval.py  session.py  textbook_service.py
backend/src/tools/: retrieval_tool.py
backend/src/utils/: text_processing.py  validation.py
backend/tests/: acceptance_tests.py  frontend_integration_tests.py
frontend/docusaurus/: .env.example  docusaurus.config.js  package-lock.json  package.json
history/adr/: 0001-environment-variable-handling-in-docusaurus-frontend.md
specs/001-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+92 files in other folders)
