[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "cohere>=5.5.0",
    "qdrant-client>=1.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "neon-pg>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "cachetools>=5.3.2"
]

[project.scripts]
app = "backend.main:app"
