[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bs4>=0.0.2",
    "cohere>=5.20.1",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.40.0",
]
